task/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task
  namespace: task
  labels:
    app: task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task
  template:
    metadata:
      labels:
        app: task
        version: v1
    spec:
      containers:
        - name: task
          image: asia.gcr.io/stable-device-253005/go-grpc-microservices-task
          imagePullPolicy: Always
          ports:
            - name: grpc-port
              containerPort: 50051
              protocol: TCP
