task/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-service
  namespace: task
  labels:
    app: task
spec:
  selector:
    app: task
  type: ClusterIP
  ports:
    - name: grpc
      port: 50051
      targetPort: grpc-port
      protocol: TCP
