task/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: task-route
  namespace: task
spec:
  hosts:
    - task-service.task.svc.cluster.local
  http:
    - match:
        - port: 50051
      route:
        - destination:
            host: task-service.task.svc.cluster.local
            subset: v1
